# ROCm-OpenCL-Runtime

./: CMakeLists.txt  README.md  opencl.xml
api/opencl/amdocl/: CMakeLists.txt
runtime/: CMakeLists.txt
runtime/device/: device.hpp  devprogram.cpp  devprogram.hpp
runtime/device/rocm/: CMakeLists.txt  rocdevice.cpp  rockernel.cpp  rocprogram.cpp
runtime/platform/: object.hpp
